--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.0 - HOTFIX'
+version = '1.3s'
 group = 'com.genzvirus.simplenameplate' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'simplenameplate'
 
