--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,3 +3,4 @@ public net.minecraft.client.gui.fonts.TexturedGlyph field_211236_b # u0
 public net.minecraft.client.gui.fonts.TexturedGlyph field_211237_c # u1
 public net.minecraft.client.gui.fonts.TexturedGlyph field_211238_d # v0
 public net.minecraft.client.gui.fonts.TexturedGlyph field_211239_e # v1
+public net.minecraft.server.MinecraftServer field_240766_e_ # playerDataManager
